{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 2540,
  "lineage": "27397d41-e396-aa77-bde1-8bde3b678065",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009c5e4334b282c22",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:elastic-ip/eipalloc-009c5e4334b282c22",
            "domain": "vpc",
            "id": "eipalloc-009c5e4334b282c22",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-20-233-113.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.233.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Public NAT EIP"
            },
            "tags_all": {
              "Name": "Public NAT EIP",
              "Owner": "ymontagnier"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-0a970ef25bd374462",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a970ef25bd374462",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ymontagnier-TP07-EX02-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c911c6202a3407ad",
            "private_dns": "ip-10-0-1-148.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.148",
            "public_dns": "ec2-16-171-236-134.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.171.236.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "ymontagnier-TP07-EX02",
                  "Owner": "ymontagnier"
                },
                "tags_all": {
                  "Name": "ymontagnier-TP07-EX02",
                  "Owner": "ymontagnier"
                },
                "throughput": 125,
                "volume_id": "vol-0e02b012ef2b3f450",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2a530ee422a9c6c",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-bastion"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-bastion",
              "Owner": "ymontagnier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ee3994e0a02e9f2"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:internet-gateway/igw-022ccb2aa69a83cf5",
            "id": "igw-022ccb2aa69a83cf5",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-InternetGateway"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-InternetGateway",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/b8605cda9514ce02",
            "arn_suffix": "app/ymontagnier-nextcloud-alb/b8605cda9514ce02",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ymontagnier-nextcloud-alb-287149673.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/b8605cda9514ce02",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ymontagnier-nextcloud-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07963bf855fd009f0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09a125e5d085204cf"
              },
              {
                "subnet_id": "subnet-0a6905182a2841add"
              },
              {
                "subnet_id": "subnet-0c2a530ee422a9c6c"
              }
            ],
            "subnets": [
              "subnet-09a125e5d085204cf",
              "subnet-0a6905182a2841add",
              "subnet-0c2a530ee422a9c6c"
            ],
            "tags": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-alb"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-alb",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0112cbed386f2a4da",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/ymontagnier-nextcloud-alb/b8605cda9514ce02/6b9898b37311caa2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/ymontagnier-nextcloud-alb-tg/c50dbbc8bf24f184",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/ymontagnier-nextcloud-alb/b8605cda9514ce02/6b9898b37311caa2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/b8605cda9514ce02",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-alb-http-listener"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-alb-http-listener",
              "Owner": "ymontagnier"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nextcloud",
            "aws_lb_target_group.nextcloud",
            "aws_security_group.nextcloud-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/ymontagnier-nextcloud-alb-tg/c50dbbc8bf24f184",
            "arn_suffix": "targetgroup/ymontagnier-nextcloud-alb-tg/c50dbbc8bf24f184",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/ymontagnier-nextcloud-alb-tg/c50dbbc8bf24f184",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ymontagnier-nextcloud-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-alb-tg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-alb-tg",
              "Owner": "ymontagnier"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009c5e4334b282c22",
            "association_id": "eipassoc-0c01a80c3ba8882a1",
            "connectivity_type": "public",
            "id": "nat-0d5f9b28e8d6ca582",
            "network_interface_id": "eni-097d335a9c1a55218",
            "private_ip": "10.0.1.197",
            "public_ip": "51.20.233.113",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c2a530ee422a9c6c",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-NATGateway"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-NATGateway",
              "Owner": "ymontagnier"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:network-acl/acl-04b3b64f79ac740cc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04b3b64f79ac740cc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "13.48.4.200/30",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "134400125759",
            "subnet_ids": [],
            "tags": {
              "Name": "ymontagnier-TP07-EX02-acl"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-acl",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0429f48cae6ed4694",
            "network_acl_id": "acl-04b3b64f79ac740cc",
            "subnet_id": "subnet-05d37f04db8d1ff41"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c953b557b7f37de3",
            "network_acl_id": "acl-04b3b64f79ac740cc",
            "subnet_id": "subnet-0f90219f5160b596f"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-06e1e04333f115016",
            "network_acl_id": "acl-04b3b64f79ac740cc",
            "subnet_id": "subnet-0dde572ef93375b5b"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-067ecddd303f947ce",
            "network_acl_id": "acl-04b3b64f79ac740cc",
            "subnet_id": "subnet-0c2a530ee422a9c6c"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f1e75993b9a4f330",
            "network_acl_id": "acl-04b3b64f79ac740cc",
            "subnet_id": "subnet-0a6905182a2841add"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0371a65afc567e731",
            "network_acl_id": "acl-04b3b64f79ac740cc",
            "subnet_id": "subnet-09a125e5d085204cf"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-07d36dc921cba20d7",
            "id": "rtb-07d36dc921cba20d7",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5f9b28e8d6ca582",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-TP07-EX02-private-rtb-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-private-rtb-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-05544001c6171bf80",
            "id": "rtb-05544001c6171bf80",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5f9b28e8d6ca582",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-TP07-EX02-private-rtb-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-private-rtb-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0d13a36665a8517cb",
            "id": "rtb-0d13a36665a8517cb",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5f9b28e8d6ca582",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-TP07-EX02-private-rtb-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-private-rtb-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0ada70358a3413eda",
            "id": "rtb-0ada70358a3413eda",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022ccb2aa69a83cf5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-TP07-EX02-public-rtb"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-public-rtb",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbfde5786dc98504",
            "route_table_id": "rtb-07d36dc921cba20d7",
            "subnet_id": "subnet-05d37f04db8d1ff41"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0667ce270013f3247",
            "route_table_id": "rtb-05544001c6171bf80",
            "subnet_id": "subnet-0f90219f5160b596f"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfbfecda6feecdeb",
            "route_table_id": "rtb-0d13a36665a8517cb",
            "subnet_id": "subnet-0dde572ef93375b5b"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0501de82668d6088d",
            "route_table_id": "rtb-0ada70358a3413eda",
            "subnet_id": "subnet-0c2a530ee422a9c6c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a18ee6f8a84cf2cb",
            "route_table_id": "rtb-0ada70358a3413eda",
            "subnet_id": "subnet-0a6905182a2841add"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f766832252344a93",
            "route_table_id": "rtb-0ada70358a3413eda",
            "subnet_id": "subnet-09a125e5d085204cf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-03ee3994e0a02e9f2",
            "description": "Allow SSH inbound traffic from ynov and all outbound traffic",
            "egress": [],
            "id": "sg-03ee3994e0a02e9f2",
            "ingress": [],
            "name": "ymontagnier-TP07-EX02-bastion-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-TP07-EX02-bastion-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-bastion-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-034e90438dfa6620b",
            "description": "Security group for Nextcloud EFS",
            "egress": [],
            "id": "sg-034e90438dfa6620b",
            "ingress": [],
            "name": "ymontagnier-TP07-EX02-nextcloud-efs-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-efs-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-efs-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-07963bf855fd009f0",
            "description": "Security group for Nextcloud ALB",
            "egress": [],
            "id": "sg-07963bf855fd009f0",
            "ingress": [],
            "name": "ymontagnier-TP07-EX02-nextcloud-alb-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-alb-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-alb-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-09c4f8549f8420811",
            "description": "Security group for Nextcloud RDS",
            "egress": [],
            "id": "sg-09c4f8549f8420811",
            "ingress": [],
            "name": "ymontagnier-TP07-EX02-nextcloud-db-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-db-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-db-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0c2faf934e93bada4",
            "description": "Allow SSH inbound traffic from bastion and all outbound traffic",
            "egress": [],
            "id": "sg-0c2faf934e93bada4",
            "ingress": [],
            "name": "ymontagnier-TP07-EX02-nextcloud-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-nextcloud-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-05d37f04db8d1ff41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d37f04db8d1ff41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-private-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0f90219f5160b596f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f90219f5160b596f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-private-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-private-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0dde572ef93375b5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dde572ef93375b5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-private-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-private-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0c2a530ee422a9c6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2a530ee422a9c6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-public-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-public-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0a6905182a2841add",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6905182a2841add",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-public-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-public-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-09a125e5d085204cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a125e5d085204cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-public-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-public-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0112cbed386f2a4da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:vpc/vpc-0112cbed386f2a4da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e660ff1035c080b",
            "default_route_table_id": "rtb-014e8beaeb80fd187",
            "default_security_group_id": "sg-0f987e29b624c6854",
            "dhcp_options_id": "dopt-84fa2ded",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0112cbed386f2a4da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014e8beaeb80fd187",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-TP07-EX02-vpc"
            },
            "tags_all": {
              "Name": "ymontagnier-TP07-EX02-vpc",
              "Owner": "ymontagnier"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_alb_to_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0f14bc1d2f0869541",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f14bc1d2f0869541",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07963bf855fd009f0",
            "security_group_rule_id": "sgr-0f14bc1d2f0869541",
            "tags": {
              "Name": "Allow all outbound traffic"
            },
            "tags_all": {
              "Name": "Allow all outbound traffic",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-01d3b2e904a7fea5a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01d3b2e904a7fea5a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03ee3994e0a02e9f2",
            "security_group_rule_id": "sgr-01d3b2e904a7fea5a",
            "tags": {
              "Name": "Allow all outbound traffic"
            },
            "tags_all": {
              "Name": "Allow all outbound traffic",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-00fbfd469b4387f41",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00fbfd469b4387f41",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c2faf934e93bada4",
            "security_group_rule_id": "sgr-00fbfd469b4387f41",
            "tags": {
              "Name": "Allow all outbound traffic"
            },
            "tags_all": {
              "Name": "Allow all outbound traffic",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_alb_to_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0c5c3877e57d9f163",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c5c3877e57d9f163",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07963bf855fd009f0",
            "security_group_id": "sg-0c2faf934e93bada4",
            "security_group_rule_id": "sgr-0c5c3877e57d9f163",
            "tags": {
              "Name": "Allow HTTP from ALB"
            },
            "tags_all": {
              "Name": "Allow HTTP from ALB",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_maison_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-093fa9f8f1bd060f6",
            "cidr_ipv4": "195.7.117.146/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-093fa9f8f1bd060f6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07963bf855fd009f0",
            "security_group_rule_id": "sgr-093fa9f8f1bd060f6",
            "tags": {
              "Name": "Autoriser l'accès à NextCloud depuis ma maison"
            },
            "tags_all": {
              "Name": "Autoriser l'accès à NextCloud depuis ma maison",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_nextcloud_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-00f78229ffecc26fd",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00f78229ffecc26fd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c2faf934e93bada4",
            "security_group_id": "sg-07963bf855fd009f0",
            "security_group_rule_id": "sgr-00f78229ffecc26fd",
            "tags": {
              "Name": "Allow HTTP access from Nextcloud SG"
            },
            "tags_all": {
              "Name": "Allow HTTP access from Nextcloud SG",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-07dab25ae84ab9743",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-07dab25ae84ab9743",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c2faf934e93bada4",
            "security_group_id": "sg-09c4f8549f8420811",
            "security_group_rule_id": "sgr-07dab25ae84ab9743",
            "tags": {
              "Name": "Allow MySQL access from Nextcloud SG"
            },
            "tags_all": {
              "Name": "Allow MySQL access from Nextcloud SG",
              "Owner": "ymontagnier"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud_db_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_nfs_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-049845b47276c6237",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-049845b47276c6237",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c2faf934e93bada4",
            "security_group_id": "sg-034e90438dfa6620b",
            "security_group_rule_id": "sgr-049845b47276c6237",
            "tags": {
              "Name": "Allow NFS/EFS access from Nextcloud SG"
            },
            "tags_all": {
              "Name": "Allow NFS/EFS access from Nextcloud SG",
              "Owner": "ymontagnier"
            },
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0c0d7bd96a7cc4628",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c0d7bd96a7cc4628",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03ee3994e0a02e9f2",
            "security_group_id": "sg-0c2faf934e93bada4",
            "security_group_rule_id": "sgr-0c0d7bd96a7cc4628",
            "tags": {
              "Name": "Allow SSH from Bastion"
            },
            "tags_all": {
              "Name": "Allow SSH from Bastion",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_cloud9_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-096971796e6ecb558",
            "cidr_ipv4": "13.38.79.125/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-096971796e6ecb558",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03ee3994e0a02e9f2",
            "security_group_rule_id": "sgr-096971796e6ecb558",
            "tags": {
              "Name": "Allow SSH from Cloud9"
            },
            "tags_all": {
              "Name": "Allow SSH from Cloud9",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_maison_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-005c5cd140d3b93ff",
            "cidr_ipv4": "176.138.11.81/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-005c5cd140d3b93ff",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03ee3994e0a02e9f2",
            "security_group_rule_id": "sgr-005c5cd140d3b93ff",
            "tags": {
              "Name": "Allow SSH depuis ma maison"
            },
            "tags_all": {
              "Name": "Allow SSH depuis ma maison",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_ynov_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0c32885c63be210b0",
            "cidr_ipv4": "195.7.117.146/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c32885c63be210b0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03ee3994e0a02e9f2",
            "security_group_rule_id": "sgr-0c32885c63be210b0",
            "tags": {
              "Name": "Allow SSH from YNOV"
            },
            "tags_all": {
              "Name": "Allow SSH from YNOV",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}